--- a/style/style.css
+++ b/style/style.css
@@ -110,7 +110,7 @@ main img { max-width: 100% }
 #top_header div img { height: 12px }
 #top_header div.language { margin-right: 50px }
 #top_header div.profile a { margin-right: 20px }
-header { padding: 16px 0 25px 0 }
+header { padding: 15px 0 20px 0 }
 header .mob__menu,
 header div.flex .fa-bars,
 header .mobile__shoping { display: none }
@@ -265,7 +265,7 @@ main h1 {
 	text-align: center;
 	color: #666666;
 }
-main .main__logo {margin: 35px auto 45px;}
+main .main__logo { margin: 20px auto 40px }
 main .logo__text {
 	margin-top: 10px;
 	text-align: center;
@@ -280,7 +280,7 @@ main .main__logo a {
 	position: relative;
 	text-align: center;
 }
-main .main__logo a img { height: 40px;}
+main .main__logo a img { max-height: 40px; max-width: 70px }
 main .main__logo a .fa-chevron-down {
 	position: absolute;
 	bottom: -25px;
@@ -488,12 +488,16 @@ main.detal .detal__cart .sale__card .card__img,
 section.sale .sale__wrrap .sale__card .card__img {
 	width: 100%;
 	height: 240px;
+	background-color: transparent;
+	overflow: hidden;
+	border-radius: 5px;
+}
+main.detal .detal__cart .sale__card .card__img.empty_photo,
+section.sale .sale__wrrap .sale__card .card__img.empty_photo {
 	background-color: #fff;
 	background-image: url(images/no_image2.png);
 	background-repeat: no-repeat;
 	background-position: center;
-	overflow: hidden;
-	border-radius: 5px;
 }
 
 .card__rating .rating:not(:checked) > input {
@@ -796,7 +800,7 @@ section.sale .sale__wrrap .sale__card.no_availabilaty .cart__modal .cart__form .
 /*                                 cart modal                                               */
 
 main.detal .detal__cart .sale__card .card__price,
-section.sale .sale__wrrap .sale__card .card__price { margin-top: 18px; margin-bottom: 8px }
+section.sale .sale__wrrap .sale__card .card__price { margin-top: 18px; margin-bottom: 10px }
 main.detal .detal__cart .sale__card .card__price .price__text,
 section.sale .sale__wrrap .sale__card .card__price .price__text {
 	font-size: 27px;
@@ -896,7 +900,7 @@ footer .footer__info{
 	padding-left: 40px;
 }
 footer .footer__info h5 {
-	font-size: 18px;
+	font-size: 16px;
 	font-weight: bold;
 	line-height: 0.91;
 	text-align: left;
